--- a/package.json
+++ b/package.json
@@ -4,11 +4,22 @@
   "description": "",
   "main": "server.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "node server.js"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "express": "^4.16.4"
-  }
+    "express": "^4.17.2",
+    "nanoid": "^3.3.1"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/themadtaco/Save-My-Notes.git"
+  },
+  "keywords": [],
+  "bugs": {
+    "url": "https://github.com/themadtaco/Save-My-Notes/issues"
+  },
+  "homepage": "https://github.com/themadtaco/Save-My-Notes#readme"
 }
